[package]
name = "sockudo"
description = "A simple, fast, and secure WebSocket server for real-time applications."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["local", "v2"]
versioned-messages = []
ai-transport = ["sockudo-core/ai-transport", "sockudo-protocol/ai-transport", "sockudo-adapter/ai-transport", "versioned-messages"]
local = []
v2 = ["delta", "tag-filtering", "recovery"]
delta = ["sockudo-adapter/delta", "sockudo-delta"]
tag-filtering = ["sockudo-adapter/tag-filtering", "sockudo-filter"]
recovery = ["sockudo-adapter/recovery"]
push = ["dep:aes-gcm", "dep:base64", "dep:sha2", "dep:sockudo-push"]
push-fcm = ["push", "sockudo-push/push-fcm"]
push-apns = ["push", "sockudo-push/push-apns", "dep:jsonwebtoken", "jsonwebtoken/rust_crypto"]
push-webpush = ["push", "sockudo-push/push-webpush"]
push-hms = ["push", "sockudo-push/push-hms"]
push-wns = ["push", "sockudo-push/push-wns"]
monolith = ["push", "sockudo-push/monolith"]
full = [
  "v2",
  "versioned-messages",
  "ai-transport",
  "push",
  "push-fcm",
  "push-apns",
  "push-webpush",
  "push-hms",
  "push-wns",
  "redis",
  "redis-cluster",
  "nats",
  "pulsar",
  "rabbitmq",
  "google-pubsub",
  "kafka",
  "iggy",
  "mysql",
  "postgres",
  "dynamodb",
  "surrealdb",
  "scylladb",
  "sqs",
  "sns",
  "lambda",
]

redis = [
  "sockudo-core/redis",
  "sockudo-adapter/redis",
  "sockudo-cache/redis",
  "sockudo-queue/redis",
  "sockudo-rate-limiter/redis",
  "sockudo-delta?/redis",
  "sockudo-push?/redis",
]
redis-cluster = [
  "redis",
  "sockudo-core/redis-cluster",
  "sockudo-adapter/redis-cluster",
  "sockudo-cache/redis-cluster",
  "sockudo-queue/redis-cluster",
  "sockudo-rate-limiter/redis-cluster",
  "sockudo-push?/redis-cluster",
]
nats = ["sockudo-core/nats", "sockudo-adapter/nats", "sockudo-delta?/nats", "sockudo-queue/nats", "sockudo-push?/nats"]
pulsar = ["sockudo-core/pulsar", "sockudo-adapter/pulsar", "sockudo-queue/pulsar", "sockudo-push?/pulsar"]
rabbitmq = ["sockudo-core/rabbitmq", "sockudo-adapter/rabbitmq", "sockudo-queue/rabbitmq", "sockudo-push?/rabbitmq"]
google-pubsub = ["sockudo-core/google-pubsub", "sockudo-adapter/google-pubsub", "sockudo-queue/google-pubsub", "sockudo-push?/google-pubsub"]
kafka = ["sockudo-core/kafka", "sockudo-adapter/kafka", "sockudo-queue/kafka", "sockudo-push?/kafka"]
iggy = ["sockudo-core/iggy", "sockudo-adapter/iggy", "sockudo-queue/iggy", "sockudo-push?/iggy"]
mysql = ["sockudo-core/mysql", "sockudo-app/mysql", "dep:sqlx", "dep:urlencoding", "sockudo-push?/mysql"]
postgres = ["sockudo-core/postgres", "sockudo-app/postgres", "dep:sqlx", "dep:urlencoding", "sockudo-push?/postgres"]
dynamodb = ["sockudo-core/dynamodb", "sockudo-app/dynamodb", "dep:aws-config", "dep:aws-sdk-dynamodb", "sockudo-push?/dynamodb"]
surrealdb = ["sockudo-core/surrealdb", "sockudo-app/surrealdb", "dep:surrealdb", "dep:surrealdb-types", "sockudo-push?/surrealdb"]
scylladb = ["sockudo-core/scylladb", "sockudo-app/scylladb", "dep:scylla", "sockudo-push?/scylladb"]
sqs = ["sockudo-core/sqs", "sockudo-queue/sqs", "sockudo-push?/sqs"]
sns = ["sockudo-core/sns", "sockudo-queue/sns", "sockudo-push?/sns"]
lambda = ["sockudo-core/lambda", "sockudo-webhook/lambda"]

[[bin]]
name = "sockudo"
path = "src/main.rs"

[dependencies]
sockudo-core = { workspace = true }
sockudo-protocol = { workspace = true }
sockudo-filter = { workspace = true, optional = true }
sockudo-app = { workspace = true }
sockudo-cache = { workspace = true }
sockudo-queue = { workspace = true }
sockudo-rate-limiter = { workspace = true }
sockudo-metrics = { workspace = true }
sockudo-webhook = { workspace = true }
sockudo-delta = { workspace = true, optional = true }
sockudo-adapter = { workspace = true }
sockudo-push = { workspace = true, optional = true }

aes-gcm = { workspace = true, optional = true }
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
clap = { workspace = true }
cmake = { workspace = true }
crossfire = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
mimalloc = { workspace = true }
num_cpus = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sockudo-ws = { workspace = true }
sonic-rs = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true, optional = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
scylla = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
surrealdb-types = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
redis = { workspace = true }

[package.metadata.binstall]
pkg-url = "https://github.com/sockudo/sockudo/releases/download/v{version}/sockudo-v{version}-{target}{archive-suffix}"
pkg-fmt = "tgz"
supported-targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
