[package]
name = "sockudo-webhook"
description = "Webhook integration for Sockudo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["local"]
local = []
full = ["lambda"]
lambda = ["sockudo-core/lambda", "dep:aws-config", "dep:aws-sdk-lambda", "dep:dashmap"]

[dependencies]
sockudo-core = { workspace = true }

ahash = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-lambda = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true, optional = true }
hex = { workspace = true }
hmac = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
